[tool.poetry]
name = "flrig.beesbuzz.biz"
version = "0.1.0"
description = ""
authors = ["fluffy <fluffy@beesbuzz.biz>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
feedparser = "^6.0.10"
flask-caching = "^2.0.1"
gunicorn = "^20.1.0"
python-memcached = "^1.59"
requests = "^2.28.1"
wordfilter = "^0.2.7"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"
isort = "^5.11.4"
pylint = "^2.15.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
